<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parse_app_id">B4nKBopgxpQg5K6EzNwP6RXCYdSj5RH05Phx4xR2</string>
    <string name="parse_client_key">mAereCHU75GbQwnTYivGvgOt7A3UKF1niXmeRwO0</string>

    <string name="app_name">Group Chat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_change">Change name!</string>
    <string name="message_hint">Type something&#8230;</string>
    <string name="send">Send</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="no_items">No messages&#8230; Start typing&#8230;</string>
    <string name="no_internet">Connect to internet&#8230;</string>
    <string name="action_logout">Log Out!</string>
    <string name="action_login">Log In!</string>
    <string name="action_users">Users</string>
    <string name="title_activity_users">Users from this chat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_private_chat">Private Chat</string>

</resources>
