<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ChatActivity">

    <item
        android:id="@+id/action_users"
        android:orderInCategory="100"
        android:icon="@drawable/users"
        android:title="@string/action_users"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_updateName"
        android:title="@string/action_change"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/action_login">
    </item>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout">
    </item>

</menu>
